--- a/calss_01.ipynb
+++ b/calss_01.ipynb
@@ -43,7 +43,7 @@
     "     calss: {}\n",
     "      \n",
     "      \"\"\".format(name, age, class_)\n",
-    "#index number     0     1      2\n",
+    "\n",
     "      \n",
     "print(card)      "
    ]
@@ -69,6 +69,31 @@
     "      \n",
     "      \"\"\".format(name, class_, age)\n",
     "#index number     0     1       2\n",
+    "      \n",
+    "print(card)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now if you do not want to use index number in the format method\n",
+    "\n",
+    "\n",
+    "name:str=\"ali\"\n",
+    "age:int = 5\n",
+    "class_:str = \"seven\"\n",
+    "\n",
+    "card:str = \"\"\"\n",
+    "     \n",
+    "     name : {a} \n",
+    "     age  : {b}\n",
+    "     calss: {c}\n",
+    "      \n",
+    "      \"\"\".format(a=name, b=age, c=class_)\n",
+    "\n",
     "      \n",
     "print(card)     "
    ]
