--- a/calss_01.ipynb
+++ b/calss_01.ipynb
@@ -97,6 +97,26 @@
     "      \n",
     "print(card)     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#execute function. It would execute the string\n",
+    "\n",
+    "result = \"\"\"\n",
+    "\n",
+    "a=4\n",
+    "b=5\n",
+    "print(a+b)\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "exec(result)"
+   ]
   }
  ],
  "metadata": {
